<resources>
    <string name="app_name">Milestones</string>
    <string name="username">Username</string>
    <string name="hint_username">jane.doe</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="your_progress_so_far">Your Progress so far</string>
    <string name="placeholder_date">Mar 20, 2026</string>
    <string name="placeholder_weight">65.50 KG</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="invalid_username">Username must not empty or contain spaces</string>
    <string name="no_user_match">Username doesn\'t exist. Try creating an account!</string>
    <string name="alt_hero_image">Hero Image</string>
    <string name="delete_weight_recording">Delete Weight Recording</string>
    <string name="your_account">Your Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="notification_setting_hint">We\'ll send you an SMS once you reach your goal weight to the below number</string>
    <string name="notification_setting_label">Notify upon goal completion</string>
    <string name="settings">Settings</string>
    <string name="weight_lost_pattern">0.0KG lost of 0.0 KG</string>
    <string name="update_profile">Update Profile</string>
    <string name="sms_permission_required">Enable Goal Alerts</string>
    <string name="tvHomeUsername">Hannah</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="track_weight">Track Weight</string>
    <string name="log_weight">Log Weight</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_weight">Record Today\'s Weight</string>
    <string name="weight_hint">50.5</string>
    <string name="kg">KG</string>
    <string name="get_started">Get Started!</string>
    <string name="hint_fullname">Hannah</string>
    <string name="label_fullname">What should we call you?</string>
    <string name="heading_user_details">Enter your details</string>
    <string name="label_goal_weight">What is your goal weight?</string>
    <string name="label_current_weight">How much do you weigh right now?</string>
    <string name="logout">Logout</string>
    <string name="name_error">Name cannot be empty!</string>
    <string name="weight_error">Weight must be between 1 and 700</string>
    <string name="current_weight_error">Your current weight must be between 1 and 700</string>
    <string name="goal_weight_error">Your goal weight must be between 1 and 700</string>
    <string name="go_to_profile_page">Go to Profile page</string>
    <string name="goal_alerts">To receive notification when you reach your goals, enable the SMS permission!</string>
    <string name="enable_now">Enable now</string>
    <string name="text_motto">Your journey, one milestone at a time</string>
    <string name="login_title">Login to your account</string>
    <string name="register_title">Create an account to get started!</string>
    <string name="invalid_password">Password must contain 8 characters and must have a digit</string>
    <string name="mismatched_passwords">Passwords do not match</string>
    <string name="show_password">Show password</string>
    <string name="show_confirm_password">Show confirm password</string>
    <string name="unknown_error_signin">There was an error signing in. Please try again after sometime.</string>
    <string name="unknown_error_signup">There was an error signing up. Please try again after sometime.</string>
    <string name="invalid_weights">Invalid weight. Try number between 1 and 600.</string>
    <string name="full_name_empty_error">Full name is required.</string>
    <string name="name_update_error">There was an error updating your name.</string>
    <string name="goal_update_error">There was an error updating your weight goals.</string>
    <string name="weight_added_successfully">New weight tracked!</string>
    <string name="delete">Delete</string>
    <string name="navigate_back">Navigate back</string>
    <string name="weight_loss_progress">%02.02f KG lost of %02.02f KG</string>
    <string name="weight_gain_progress">%02.02f KG gained of %02.02f KG</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="enable_permission_manually">You have disabled SMS permissions. Please enable them manually in the app settings to use this feature.</string>
    <string name="ok">OK</string>
    <string name="sms_permission_body">This app needs SMS permission to send your alerts. Please allow it on the next screen.</string>
    <string name="sms_permission_dialog_title">SMS Permission Required</string>
    <string name="permission_denied_permanently_title">Permission Permanently Denied</string>
    <string name="no_number_provided">No number provided</string>
    <string name="update_number">Update Number</string>
    <string name="sms_number_text">Text Number: %s</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="phone_hint">+15551234123</string>
    <string name="add_number">Add Number</string>
    <string name="number_error">Invalid phone number</string>
    <string name="phone_number_error">Invalid phone number</string>
    <string name="phone_number_added_successfully">Phone number added successfully!</string>
    <string name="congratulations">Congratulations! You have pulled it off!</string>
    <string name="congratulations_sms">Congratulations %s! You\'ve defied all odds and crossed the weights from %02.02f KG to %02.02f KG.</string>
    <string name="failed_to_send_sms">There was an error sending the congratulatory message!</string>
    <string name="sms_sent_successfully">SMS sent successfully!</string>
    <string name="weight_format">%02.02f KG</string>
    <string name="update_details">Update Details</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="no_history">no history</string>
    <string name="no_tracking_history">No Weight History!</string>
    <string name="no_weight_history_text">Your weights will show up here as you start tracking.</string>
</resources>