<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="480dp"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvAddWeightTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_your_weight"
        android:textColor="@color/slate_900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddWeightTitle">

        <EditText
            android:id="@+id/etCurrentWeight"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:autofillHints="none"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/slate_900"
            android:textColorHint="@color/slate_500"
            app:layout_constraintEnd_toStartOf="@id/tvWeightUnit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWeightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textColor="@color/slate_900"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/etCurrentWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etCurrentWeight" />

        <TextView
            android:id="@+id/tvWeightError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/weight_error"
            android:textAlignment="textEnd"
            android:textColor="@color/red_600"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCurrentWeight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWeightInput">

        <Button
            android:id="@+id/btnAddWeightCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/slate_100"
            android:text="@string/cancel"
            android:textColor="@color/slate_700" />

        <Button
            android:id="@+id/btnAddWeightSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/log_weight"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>