<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="@dimen/space_lg"
    android:paddingBottom="@dimen/space_xl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/space_sm">

        <LinearLayout
            android:id="@+id/layoutProfileTopAppbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnProfileNavigateBack"
                android:layout_width="@dimen/min_interactive_size"
                android:layout_height="@dimen/min_interactive_size"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/navigate_back"
                android:src="@drawable/chevron_back"
                app:tint="@color/slate_800" />

            <TextView
                android:id="@+id/tvAccountHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_account"
                android:textColor="@color/slate_900"
                android:textSize="@dimen/fs_3xl"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgViewProfilePicture"
            android:layout_width="@dimen/profile_icon_size"
            android:layout_height="@dimen/profile_icon_size"
            android:layout_marginTop="@dimen/space_md"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/account_icon"
            app:layout_constraintStart_toStartOf="@id/layoutProfileTopAppbar"
            app:layout_constraintTop_toBottomOf="@id/layoutProfileTopAppbar"
            app:tint="@color/slate_500" />


        <TextView
            android:id="@+id/tvProfileFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_xs"
            android:layout_marginTop="@dimen/space_3xs"
            android:text="@string/hint_username"
            android:textColor="@color/slate_900"
            android:textSize="@dimen/fs_xl"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgViewProfilePicture"
            app:layout_constraintTop_toTopOf="@id/imgViewProfilePicture" />


        <Button
            android:id="@+id/btnProfileUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:text="@string/update_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfileFullName" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2xs"
            android:layout_marginEnd="@dimen/space_sm"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btnProfileUpdateProfile"
            app:layout_constraintStart_toStartOf="@+id/tvProfileFullName"
            app:layout_constraintTop_toBottomOf="@id/tvProfileFullName">

            <ProgressBar
                android:id="@+id/pbProfileWeightChange"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:progressTint="@color/mint_500" />

            <TextView
                android:id="@+id/tvProfileWeightChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4xs"
                android:text="@string/weight_lost_pattern"
                app:layout_constraintStart_toStartOf="@+id/pbProfileWeightChange"
                app:layout_constraintTop_toBottomOf="@+id/pbProfileWeightChange" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvSettingSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/settings"
            android:textColor="@color/slate_800"
            android:textSize="@dimen/fs_2xl"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imgViewProfilePicture"
            app:layout_constraintTop_toBottomOf="@+id/imgViewProfilePicture" />

        <LinearLayout
            android:id="@+id/layoutNotificationSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_sm"
            android:layout_marginTop="@dimen/space_xs"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettingSection">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNotificationSettingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_2xs"
                    android:text="@string/notification_setting_label"
                    android:textColor="@color/slate_950"
                    android:textSize="@dimen/fs_md"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/notificationSettingHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_3xs"
                    android:text="@string/notification_setting_hint"
                    android:textColor="@color/slate_800"
                    android:textSize="@dimen/fs_sm" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/space_xs">

                    <TextView
                        android:id="@+id/tvProfileNotificationNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_number_provided"
                        android:textColor="@color/slate_900"
                        android:textSize="@dimen/fs_md" />

                    <Button
                        android:id="@+id/btnProfileUpdateNumber"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/space_0"
                        android:text="@string/update_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tvProfileFullName"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

            <Switch
                android:id="@+id/switchProfileNotificationSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/min_interactive_size"
                android:minHeight="@dimen/min_interactive_size"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <Button
            android:id="@+id/btnProfileLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:backgroundTint="@color/red_50"
            android:text="@string/logout"
            android:textColor="@color/red_600"
            app:layout_constraintEnd_toEndOf="@+id/layoutNotificationSettings"
            app:layout_constraintStart_toStartOf="@+id/layoutNotificationSettings"
            app:layout_constraintTop_toBottomOf="@+id/layoutNotificationSettings"
            app:layout_constraintWidth_max="@dimen/max_btn_width" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>