<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="@dimen/space_md"
    android:paddingBottom="@dimen/space_xl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgAuthIllustration"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/illustration_height"
            android:contentDescription="@string/alt_hero_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hero_image" />

        <TextView
            android:id="@+id/tvAuthLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginEnd="@dimen/space_lg"
            android:text="@string/app_name"
            android:textSize="@dimen/fs_4xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAuthIllustration" />

        <TextView
            android:id="@+id/tvAuthMotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginEnd="@dimen/space_lg"
            android:paddingTop="@dimen/space_4xs"
            android:text="@string/text_motto"
            android:textSize="@dimen/fs_sm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthLogo" />


        <TextView
            android:id="@+id/tvAuthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/login_title"
            android:textSize="@dimen/fs_lg"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutAuthUsername"
            app:layout_constraintTop_toBottomOf="@id/tvAuthMotto" />

        <LinearLayout
            android:id="@+id/layoutAuthUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginTop="@dimen/space_sm"
            android:layout_marginEnd="@dimen/space_lg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthTitle"
            app:layout_constraintWidth_max="@dimen/max_layout_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/etAuthUsername"
                android:text="@string/username" />

            <EditText
                android:id="@+id/etAuthUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:inputType="text"
                android:minHeight="@dimen/min_interactive_size" />
            <!--TODO: Add show password -->
            <TextView
                android:id="@+id/tvAuthUsernameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_username"
                android:textAlignment="textEnd"
                android:textColor="@color/red_600"
                android:textSize="@dimen/fs_sm"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAuthPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginTop="@dimen/space_sm"
            android:layout_marginEnd="@dimen/space_lg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAuthUsername"
            app:layout_constraintWidth_max="@dimen/max_layout_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/etAuthPassword"
                android:text="@string/password" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etAuthPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/min_interactive_size" />

                <ImageButton
                    android:id="@+id/btnAuthPasswordVisibility"
                    android:layout_width="@dimen/min_interactive_size"
                    android:layout_height="@dimen/min_interactive_size"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/show_confirm_password"
                    app:srcCompat="@drawable/visibility_on"
                    app:tint="@color/slate_800" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAuthPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_password"
                android:textAlignment="textEnd"
                android:textColor="@color/red_600"
                android:textSize="@dimen/fs_sm"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAuthConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginTop="@dimen/space_sm"
            android:layout_marginEnd="@dimen/space_lg"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAuthPassword"
            app:layout_constraintWidth_max="@dimen/max_layout_width">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/etAuthConfirmPassword"
                android:text="@string/confirm_password" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etAuthConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/min_interactive_size" />

                <ImageButton
                    android:id="@+id/btnAuthConfirmPasswordVisible"
                    android:layout_width="@dimen/min_interactive_size"
                    android:layout_height="@dimen/min_interactive_size"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/show_password"
                    app:srcCompat="@drawable/visibility_on"
                    app:tint="@color/slate_800" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAuthConfirmPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_password"
                android:textAlignment="textEnd"
                android:textColor="@color/red_600"
                android:textSize="@dimen/fs_sm"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAuthAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:layout_marginTop="@dimen/space_xl"
            android:layout_marginEnd="@dimen/space_lg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAuthConfirmPassword"
            app:layout_constraintWidth_max="@dimen/max_btn_width">

            <Button
                android:id="@+id/btnAuthPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_2xs"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnAuthSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_50"
                android:text="@string/create_account"
                android:textColor="@color/primary_600" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>