<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/space_sm"
    android:paddingEnd="@dimen/space_sm"
    tools:ignore="RtlSymmetry">


    <TextView
        android:id="@+id/tvHistoryItemWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_weight"
        android:textAlignment="center"
        android:textColor="@color/slate_800"
        android:textSize="@dimen/fs_3xl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHistoryItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_date"
        android:textAlignment="textEnd"
        android:textColor="@color/slate_700"
        android:textSize="@dimen/fs_sm"
        app:layout_constraintStart_toStartOf="@+id/tvHistoryItemWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryItemWeight" />

    <ImageButton
        android:id="@+id/btnWeightItemDelete"
        android:layout_width="@dimen/min_interactive_size"
        android:layout_height="@dimen/min_interactive_size"
        android:layout_marginStart="@dimen/space_3xs"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/delete_weight_recording"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHistoryItemWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_icon"
        app:tint="@color/red_400" />


</androidx.constraintlayout.widget.ConstraintLayout>